@@ -1,5 +1,5 @@
 <?php
-// $Id: FeedsProcessor.inc,v 1.11 2010/06/19 15:57:13 alexb Exp $
+// $Id: FeedsProcessor.inc,v 1.12 2010/07/08 17:19:16 alexb Exp $
 
 /**
  * Abstract class, defines interface for processors.
@@ -93,6 +93,25 @@ abstract class FeedsProcessor extends FeedsPlugin {
     $parser = feeds_importer($this->id)->parser;
     if (empty($target_item)) {
       $target_item = array();
+    }
+
+    // Many mappers add to existing fields rather than replacing them. Hence we
+    // need to clear target elements of each item before mapping in case we are
+    // mapping on a prepopulated item such as an existing node.
+    if (is_array($target_item)) {
+      $target_item = (object)$target_item;
+      $convert_to_array = TRUE;
+    }
+    foreach ($targets[$this->id] as $target_name => $target) {
+      if (isset($target['real_target']) && isset($target_item->$target['real_target'])) {
+        unset($target_item->$target['real_target']);
+      }
+      else if (isset($target_item->$target_name)) {
+        unset($target_item->$target_name);
+      }
+    }
+    if ($convert_to_array) {
+      $target_item = (array)$target_item;
     }
 
     /*
