@@ -1,8 +1,9 @@
-// $Id: CHANGELOG.txt,v 1.111 2010/07/06 00:47:22 alexb Exp $
+// $Id: CHANGELOG.txt,v 1.112 2010/07/08 17:19:16 alexb Exp $
 
 Feeds 6.x 1.X XXXX
 ------------------
 
+- #840626 alevine, alex_b: Support using same mapping target multiple times.
 - #624464 lyricnz, alex_b: Fix to "support tabs as delimiters".
 - #840350 lyricnz: (Optionally) Transliterate enclosure filenames to provide
   protection from awkward names.
